# pixi-vn-react-template

./: .assetpack.js  .assetpack.ts  .editorconfig  .eslintrc.cjs  .gitignore  README.md  biome.json  firebase.json  forge.config.cts  index.html  ionic.config.json  package-lock.json  package.json  pwa-assets.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts
.github/workflows/: deploy.yml  desktop.yml  firebase.yml  mobile.yml  tauri.yml
ink/: start.ink
public/: service-worker.js
src/: App.tsx  AppRoutes.tsx  Home.tsx  Imports.tsx  constans.ts  constants.ts  i18n.ts  index.css  main.tsx  pixi-vn-keys.gen.d.ts  pixi-vn.d.ts  pixi-vn.keys.d.ts  pixi-vn.keys.gen.ts  pixi-vn.keys.ts  routeTree.gen.ts  router.tsx  service-worker.ts  styles.css  vite-env.d.ts
src-electron/: main.ts
src-electron/icons/: icon.icns
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  steam.rs
src/assets/: index.ts  ink-manifest.gen.json  manifest.ts
src/components/: AnimatedDots.tsx  ChoiceButton.tsx  ErrorFallback.tsx  GameSaveSlot.tsx  MarkdownTypewriter.tsx  MenuButton.tsx  ModalConfirmation.tsx  ModalDialog.tsx  NextButton.tsx  ReturnMainMenuButton.tsx  SettingButton.tsx  SliderResizer.tsx  SoundChannelControl.tsx  TextMenuButton.tsx  Typewriter.tsx  TypewriterList.tsx  TypographyShadow.tsx  VisibilityButton.tsx  dev-devtools.tsx  loading.tsx  quick-tools.tsx
src/content/: characters.ts
src/hooks/: hotkeys-hooks.ts  minigame-hooks.ts  motion-hooks.ts  narration-hooks.ts  navigation-hooks.ts  props-hooks.ts  save-hooks.tsx  useClosePageDetector.ts  useConfirmBackNavigation.ts  useDebouncedEffect.ts  (+24 more)
(+198 files in other folders)
